# elliot-wave

./: README.md  app.py  pyproject.toml  requirements.txt
examples/: example_usage.py
src/elliott_miner_engine/: __init__.py  cli.py  data_sources.py  engine.py  fib.py  hierarchy.py  models.py  momentum.py  mtf.py  pivots.py  plotting.py  scanner.py  timing.py  wave_rules.py
src/elliott_miner_engine/resources/: ihsg_fallback.csv  us_fallback.csv
tests/: test_synthetic.py
